Fix variables spacing

--- a/css.sass/_variables.scss
+++ b/css.sass/_variables.scss
@@ -1,5 +1,5 @@
 // -- FONTS -- //
-$base-font-family: museo-sans-rounded,  "Helvetica Neue",  Verdana,  sans-serif;;
+$base-font-family: museo-sans-rounded, "Helvetica Neue", Verdana, sans-serif;
 $header-font-family: $base-font-family;
 
 // -- COLORS -- //
